Use Files.create and Files.delete